# LandingPage

./: .env.development  .gitignore  Dockerfile  README.md  app.py  compose.yaml  cone.py  conection.py  config.py  database.py  datateste.py  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  settings.toml  teste.db  vercel.json
.github/workflows/: python-app.yml
api/: app.py
api/blueprints/: api.py  web.py
api/blueprints/webui/: __init__.py  views.py
api/templates/: home.html  index.html
core/: __init__.py  envia_email.py  models.py  routes.py
core/templates/: error_404.html  index.html
data/: DataBase.db
infra/: compose.yaml  database.py  schema.sql
infra/scripts/: clear_requirements.py
landpage/: __init__.py  app.py  models.py
landpage/blueprints/: api.py  web.py
landpage/blueprints/webui/: __init__.py  views.py
landpage/blueprints/webui/templates/: home.html
landpage/ext/: __init__.py  commands.py  database.py  mail.py
landpage/ext/schemas/: schema.sql
landpage/static/css/: style.css
landpage/static/js/: data.js
landpage/templates/: home.html
scripts/: clear_requirements.py
static/: style.css
templates/: success.html
test/: conftest.py  test_email.py
