[tool.poetry]
name = "landingpage"
version = "0.1.0"
description = ""
authors = ["ParsivalT <tthiagovinnicius@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
